[package]
name = "bussinga"
version = "0.0.1"
description = "better than napture"
authors = ["coding398"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "http-all", "window-hide", "window-start-dragging", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-unmaximize", "window-show", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
